# sfml-tower-defense

./: CMakeLists.txt  README.md  dox.config
assets/: mastertext.tsv
data/: AnimDefine.json  ButtonDefine.json  EnemyDefine.json  EnemySpawnRuleDefine.json  MapDefine.ldtk  ProjectionDefine.json  ShopItemDefine.json  TowerDefine.json
include/: Audio.h  Components.h  Data.h  Grids.h  Prefabs.h  States.h
include/Audio/: MusicManager.h  SoundManager.h
include/Components/: Button.h  Component.h  GameObject.h  GameObject.inl  SimpleButton.h  Transform.h
include/Core/: AsyncTask.h  GameManager.h  ObjectHandle.h  ObjectWrapper.h  PlayerState.h
include/Data/: AnimDefine.h  ButtonDefine.h  DataManager.h  EnemyDefine.h  EnemySpawnRuleDefine.h  JsonBase.h  PlayerData.h  ProjectionDefine.h  ShopItemDefine.h  TowerDefine.h
include/Grid/: Grid.h  GridLayer.h  GridSystem.h
include/Input/: InputEnums.h  InputEventHandler.h  InputManager.h  PointerData.h
include/Prefabs/: PlayerHudPrefab.h  PrefabFactory.h  SaveSlotPrefab.h  ShopItemPrefab.h  TowerShopItemPrefab.h
include/Renderer/: GameRenderer.h  RenderLayer.h
include/Resource/: Localization.h  ResourceManager.h  ResourceManager.inl
include/States/: GameCompletedState.h  GameOverState.h  GameState.h  GameWinState.h  LoadingState.h  MainState.h  PauseState.h  SaveAndLoadState.h  ShopState.h  StartState.h  State.h  StateMachine.h  StateMachine.inl  TestState.h
include/Utils/: GuidGenerator.h  Logger.h  Singleton.h  Time.h  TransformUtility.h
src/: main.cpp
src/Audio/: MusicManager.cpp  SoundManager.cpp
src/Components/: Animator.cpp  Button.cpp  CharacterAnimator.cpp  Component.cpp  Enemy.cpp  EnemySpawner.cpp  GameObject.cpp  (+17 more)
(+52 files in other folders)
